<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SyaratKetentuanActivity">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Syarat dan Ketentuan"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Harap membaca Syarat dan Ketentuan ini secara seksama sebelum Anda mulai menggunakan Aplikasi Kami, karena peraturan ini berlaku pada penggunaan Anda terhadap Aplikasi Kami."
        android:textStyle="italic"
        android:textSize="12sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ketentuan Umum"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/syarat"
        android:justificationMode="inter_word"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Penggunaan Aplikasi dan Layanan"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/syarat2"
        android:justificationMode="inter_word"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/syarat3"
        android:justificationMode="inter_word"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pernyataan"
        android:layout_marginBottom="20dp"
        android:textStyle="italic"/>
</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>