<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".murid.EditProfilMuridActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama Lengkap"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/et_nama_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="textPersonName" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NIK"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/et_nik_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="number" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Tanggal Lahir"/>
        <EditText
            android:id="@+id/et_lahir_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_nama"
            android:hint=""
            android:inputType="date"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Nama Orang Tua"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:id="@+id/et_ortu_edit"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Alamat Sesuai KK / KTP"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="*Isi kembali menurut data anda, jika anda mengedit data yang lainnya"
            android:textStyle="italic"
            android:textColor="@color/red"
            android:textSize="10sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Pilih Provinsi"/>
        <Spinner
            android:id="@+id/spProvinsi_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:prompt="@string/prompt_kabupaten" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"

            android:text="Pilih Kabupaten / Kota"/>
        <Spinner
            android:id="@+id/spKabupaten_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:prompt="@string/prompt_kecamatan" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Pilih Kecamatan"/>
        <Spinner
            android:id="@+id/spKecamatan_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:prompt="@string/prompt_desa" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Pilih Desa / Kelurahan"/>
        <Spinner
            android:id="@+id/spDesa_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:prompt="@string/prompt_desa" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Alamat Detail (RT/RW, Jalan, Dukuh)"
            android:textStyle="bold"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:id="@+id/et_alamat_edit"/>

        <Button
            android:id="@+id/btnUpdateMurid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="16dp"
            android:text="Update Data" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>