<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guru.FormulirGuruActivity">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="20dp"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_satu"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lengkapi Pendaftaran Anda"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/white"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ilus_form"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Data digunakan untuk melengkapi pendaftaran serta verifikasi user baru, yang nantinya digunakan untuk sistem yang berjalan"
        android:textStyle="normal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="10sp"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama Lengkap"
            android:textStyle="bold"
            />
    <EditText
        android:id="@+id/et_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="textPersonName" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NIK"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/et_nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="number" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nomor Handphone"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/etHp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="number" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Tanggal Lahir"/>
        <EditText
            android:id="@+id/et_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="number" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Alamat Sesuai KK / KTP"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Pilih Provinsi"/>
        <Spinner
            android:id="@+id/spProvinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:prompt="@string/prompt_kabupaten" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"

            android:text="Pilih Kabupaten / Kota"/>
        <Spinner
            android:id="@+id/spKabupaten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:prompt="@string/prompt_kecamatan" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Pilih Kecamatan"/>
        <Spinner
            android:id="@+id/spKecamatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:prompt="@string/prompt_desa" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Pilih Desa / Kelurahan"/>
        <Spinner
            android:id="@+id/spDesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:prompt="@string/prompt_desa" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Alamat Detail (RT/RW, Jalan, Dukuh dll)"/>
        <EditText
            android:id="@+id/etAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Deskripsi Diri"/>
    <EditText
        android:id="@+id/et_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="textMultiLine"
        android:minLines="3" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pilih Foto"
            android:textStyle="bold"
            />
        <ImageView
            android:id="@+id/iv_foto"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop" />
    <Button
        android:id="@+id/btn_pilih_foto"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_deskripsi"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:text="Pilih Foto" />

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="Submit Data" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>